--- a/package.json
+++ b/package.json
@@ -4,25 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "server": "nodemon index.js",
-    "client": "npm start --prefix client",
-    "clientinstall": "npm install --prefix client",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "deploy":"concurrently \"npm run server\" \"npm run client\"",
-     "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-   }
-
-
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Cristina",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
-    "concurrently": "^8.2.2",
-    "config": "^3.3.9",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -30,7 +18,6 @@
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3"
   },
   "devDependencies": {
