--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.0",
+    "create-react-component-folder": "^0.3.7",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
+    "react-router-dom": "^6.21.0",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
